[package]
name = "rtodo2_lib"
version.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = {version ="1.0.136", features = ["derive"] }
serde_json = "*"
clap = { version = "4.4.7", features = ["derive"] }
shellexpand = "*"
strum = { version = "0.25", features = ["derive"] }
chrono = {version = "0.4.31", features = ["serde"]}
serde_with = {version = "3.4.0", features = ["chrono_0_4", "chrono"]}

